# ManitouLite

./: ChangeLog  DB.pro  GUI.pro  Makefile.in  Manitou.pro  ManitouCreator.config  ManitouCreator.files  ManitouCreator.includes  NEWS  README  Version  addresses.cpp  addresses.h  config.h  config.h.in  configure  configure.in  connection.h  creatorConnection.cpp  creatorConnection.h  database.cpp  database.h  date.h  db.cpp  db.h  db_listener.cpp  db_listener.h  exclude  main.cpp  main.h  manitouDB.pro  manitouPortotype.pro  manitou_DB_create.dump  pgConnection.cpp  pgConnection.h  sqliteConnection.cpp  sqliteConnection.h  sqlquery.cpp  sqlquery.h  sqlstream.cpp  (+3 more)
DB/: Create Test DataBase  DB.pro  IStreamExec.h  date.cpp  db.cpp  db.h  db_excpt.cpp  db_excpt.h  db_listener.cpp  dbtypes.h  main.cpp  main.h  mainfunc.cpp  sqlquery.cpp  sqlquery.h  sqlstream.cpp  sqlstream.h
GUI/: GUI.pro  addresses.cpp  app_config.cpp  attachment.cpp  attachment_listview.cpp  creatorConnection.cpp  date.cpp  db.cpp  edit_rules.h  filter_log.cpp  filter_rules.cpp  headers_groupview.cpp  identities.cpp  login.cpp  login.h  mail_listview.h  mailheader.cpp  main.cpp  main.h  message.cpp  message_view.h  msg_list_window.cpp  newmailwidget.cpp  notepad.cpp  pgConnection.cpp  preferences.cpp  searchbox.cpp  selectmail.cpp  selectmail.h  tags.cpp  user_queries.cpp  users.cpp
PostgreSQL/: psql_stream.cpp  psql_stream.h
SQLite/: sqliteConnection.cpp  sqlite_stream.cpp  sqlite_stream.h
createDB/: DB_dump  createPostgreSQL_DB  createPostgreSQL_DB.sql  createSQLite_DB  createSQLite_DB.sql
help/: Makefile.in
src/: GUI.pro  Makefile.am  Makefile.in  about.cpp  addresses.cpp  addresses.h  app_config.cpp  attachment.cpp  creatorConnection.cpp  creatorConnection.h  database.h  date.h  db.cpp  db_listener.cpp  edit_rules.cpp  filter_rules.cpp  headers_groupview.cpp  helper.cpp  icons.h  (+24 more)
transman/: CMakeLists.txt  transman.kdev4
transman/I/: IOParser  IOParserController  POP3Connection  POP3Controller  POP3State  SMTPConnection  StartMode  ioparser.h  ioparsercontroller.h  pop3connection.h  pop3controller.h  popstate.h  smtpconnection.h  startmode.h  token.h
transman/src/: CMakeLists.txt  cparser.cpp  ioparsercontroller.cpp  popstate.cpp  transman.cpp  transscanner.l
transman/src/parser_I/: cparser.h
transman/test/: CMakeLists.txt
transman/test/build_test/: CMakeLists.txt  testbuild.cpp
(+162 files in other folders)
